# rust-doodles

./: .gitignore  README.md
Flingshot/: Cargo.toml
Flingshot/src/: main.rs
hackerrank/algorithms/solve_me_first/src/: main.rs
hackerrank/algorithms/warmup/a_very_big_sum/: Cargo.toml
hackerrank/algorithms/warmup/a_very_big_sum/src/: main.rs
hackerrank/algorithms/warmup/diagonal_difference/: Cargo.toml
hackerrank/algorithms/warmup/diagonal_difference/src/: main.rs
hackerrank/algorithms/warmup/simple_array_sum/: Cargo.toml
hackerrank/algorithms/warmup/solve_me_first/: Cargo.toml
oanda_test/: Cargo.toml
oanda_test/src/: instrumentTicker.rs  main.rs  pricewatcher.rs
oanda_test/src/custom_headers/: X_Accept_Datetime_Format.rs  mod.rs
project_euler/: Cargo.toml
project_euler/src/: lib.rs  main.rs  primes.rs
